# cuda-kernel-lab

./: .gitignore  CMakeLists.txt  README.md
operators/flash_attention/: README.md
operators/flash_attention/src/: bindings.cpp  fa_v1.cu
operators/flash_attention/tests/: test_fa_v1.py
operators/gemm_cute/.torch_extensions/cute_gemm_v1/: .ninja_deps  .ninja_log  build.ninja
operators/gemm_cute/benchmark/: benchmark_cute_gemm.py
operators/gemm_cute/src/: bindings.cpp  cuda_core_gemm.cu  cute_gemm_simple.cu  cute_gemm_v1.cu  cute_gemmv1.cu  cute_gemmv2.cu  cute_style_gemm.cu
operators/gemm_cute/tests/: test_cuda_core_gemm.py  test_cute_gemm_v1.py
operators/transpose/: CMakeLists.txt  README.md
operators/transpose/benchmark/: benchmark.cu  plot.py
operators/transpose/include/transpose/: cuda_check.cuh  kernels.cuh
operators/transpose/src/: kernel_registry.cu  transpose_cublas.cu  transpose_naive.cu  transpose_padding.cu  transpose_smem.cu  transpose_tiled.cu
operators/transpose/tests/: correctness_test.cu
scripts/: run_all.sh
